@@ -222,3 +222,5 @@ b4941|inner_ring|1
 b4941|crossing_line|5
 b5234.0|1
 b5234.1|1
+t5568|invalidities at start|
+t5568|invalidities at end|
